--- a/package.json
+++ b/package.json
@@ -4,120 +4,15 @@
     "mocha": "mocha test/unit/node/all.js --delay"
   },
   "devDependencies": {
-    "7zip": "0.0.6",
-    "@types/applicationinsights": "0.20.0",
-    "@types/chokidar": "2.1.3",
-    "@types/cookie": "^0.3.3",
-    "@types/debug": "^4.1.5",
-    "@types/graceful-fs": "4.1.2",
-    "@types/http-proxy-agent": "^2.0.1",
-    "@types/keytar": "^4.4.0",
-    "@types/minimist": "^1.2.0",
-    "@types/mocha": "2.2.39",
-    "@types/node": "^12.11.7",
-    "@types/sinon": "^1.16.36",
-    "@types/vscode-windows-registry": "^1.0.0",
-    "@types/webpack": "^4.4.10",
-    "@types/windows-foreground-love": "^0.3.0",
-    "@types/windows-mutex": "^0.4.0",
-    "@types/windows-process-tree": "^0.2.0",
-    "@types/winreg": "^1.2.30",
-    "@types/yauzl": "^2.9.1",
-    "@types/yazl": "^2.4.2",
-    "@typescript-eslint/eslint-plugin": "3.2.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "ansi-colors": "^3.2.3",
-    "asar": "^3.0.3",
-    "chromium-pickle-js": "^0.2.0",
-    "concurrently": "^5.2.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "cson-parser": "^1.3.3",
-    "css-loader": "^3.2.0",
-    "debounce": "^1.0.0",
-    "deemon": "^1.4.0",
-    "electron": "9.3.0",
-    "eslint": "6.8.0",
-    "eslint-plugin-jsdoc": "^19.1.0",
-    "event-stream": "3.3.4",
-    "fancy-log": "^1.3.3",
-    "fast-plist": "0.1.2",
-    "file-loader": "^4.2.0",
-    "glob": "^5.0.13",
-    "gulp": "^4.0.0",
-    "gulp-atom-electron": "^1.22.0",
-    "gulp-azure-storage": "^0.10.0",
-    "gulp-buffer": "0.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-eslint": "^5.0.0",
-    "gulp-filter": "^5.1.0",
-    "gulp-flatmap": "^1.0.2",
-    "gulp-gunzip": "^1.0.0",
-    "gulp-json-editor": "^2.5.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-remote-retry-src": "^0.6.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-shell": "^0.6.5",
-    "gulp-tsb": "4.0.5",
-    "gulp-untar": "^0.0.7",
-    "gulp-vinyl-zip": "^2.1.2",
-    "husky": "^0.13.1",
-    "innosetup": "6.0.5",
-    "is": "^3.1.0",
-    "istanbul-lib-coverage": "^3.0.0",
-    "istanbul-lib-instrument": "^4.0.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-lib-source-maps": "^4.0.0",
-    "istanbul-reports": "^3.0.0",
-    "jsdom-no-contextify": "^3.1.0",
-    "lazy.js": "^0.4.2",
-    "merge-options": "^1.0.1",
-    "mime": "^1.4.1",
-    "minimatch": "^3.0.4",
-    "mkdirp": "^0.5.0",
     "mocha": "^2.2.5",
-    "mocha-junit-reporter": "^1.17.0",
-    "opn": "^6.0.0",
-    "optimist": "0.3.5",
-    "p-all": "^1.0.0",
-    "playwright": "1.3.0",
-    "pump": "^1.0.1",
-    "queue": "3.0.6",
-    "rcedit": "^1.1.0",
-    "rimraf": "^2.2.8",
-    "should": "^13.2.3",
-    "sinon": "^1.17.2",
-    "source-map": "^0.4.4",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^4.4.2",
-    "tsec": "googleinterns/tsec",
-    "typescript": "^4.1.0-dev.20200824",
-    "typescript-formatter": "7.1.0",
-    "underscore": "^1.8.2",
-    "vinyl": "^2.0.0",
-    "vinyl-fs": "^3.0.0",
-    "vsce": "1.48.0",
-    "vscode-debugprotocol": "1.41.0",
-    "vscode-nls-dev": "^3.3.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-stream": "^5.2.1",
-    "yaserver": "^0.2.0"
+    "mocha-junit-reporter": "^1.17.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/YipWWong/sandbox.git"
   },
-  "optionalDependencies": {
-    "vscode-windows-ca-certs": "0.2.0",
-    "vscode-windows-registry": "1.0.2",
-    "windows-foreground-love": "0.2.0",
-    "windows-mutex": "0.3.0",
-    "windows-process-tree": "0.2.4"
-  },
   "engines": {
-      "node": "12.x",
-      "npm" : "6.14.4"
+    "node": "12.x",
+    "npm": "6.14.4"
   }
 }
