--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "devDependencies": {
     "mocha": "^2.5.3",
-    "mocha-junit-reporter": "^1.17.0"
+    "mocha-junit-reporter": "^1.17.0",
+    "should": "^13.2.3"
   },
   "repository": {
     "type": "git",
